chore: small fix to text wrap in toc for doc site

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -526,6 +526,9 @@ ul.toc-headings li a {
     outline: none;
     cursor: default;
     border: 0;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 ul.toc-headings li a:hover {
